--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
             "name": "Nakato"
         }
     ],
-    "require": {},
+    "require": {
+        "twig/twig": "3.1"
+    },
     "require-dev": {},
     "autoload": {
         "psr-4": {
